--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ nav a {
     width: 100%;
     height: 100%;
     margin-bottom: 12px;
-    background-color: #E5E7EB;
+    background-color: #459985;;
     text-align: center;
     display: flex;
     justify-content: center;
